# UAM-Simulator-Modern

./: .gitignore  CMakeLists.txt  README.md  TO-DO.md  config.yaml  sensors.yaml
include/: tiny_obj_loader.h
map/: convert_surface_tile.py  extract_clip.py  extract_ground_mesh.py  find_gml_tile.py  hh_clip.mtl  material.mtl  surface_online.mtl  surface_source.glb  surface_tmp.glb  upscale_textures.py
model/: body.mtl  prop_FL.mtl
shaders/: grid.frag  grid.vert  object.frag  object.vert  point_line.frag  point_line.vert  shadow.frag  shadow.vert
src/: main.cpp  main.mm  main_old.cpp
src/core/: SceneMesh.cpp  SceneMesh.hpp  SensorGeometry.cpp  SensorGeometry.hpp  SimulatorCore.cpp  SimulatorCore.hpp
src/metal/: MetalMesh.hpp  MetalMesh.mm
